[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
anyhow = "1"
dirs-next = { version = "2.0.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["api-all"] }
tokio = { version = "1" }
uuid = { version = "1.4", features = ["v4"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
iroh = { git = "https://github.com/n0-computer/iroh",  branch = "ramfox/todo" }
iroh-bytes = { git = "https://github.com/n0-computer/iroh", branch = "ramfox/todo" }
iroh-net = { git = "https://github.com/n0-computer/iroh", branch = "ramfox/todo" }
iroh-sync = { git = "https://github.com/n0-computer/iroh", branch = "ramfox/todo" }
iroh-gossip = { git = "https://github.com/n0-computer/iroh", branch = "ramfox/todo" }
quic-rpc = { version = "0.6", default-features = false, features = ["flume-transport"] }
futures = "0.3.25"
bytes = "1"
postcard = "1"
num_cpus = { version = "1.15.0" }
data-encoding = "2.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
