[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
anyhow = "1"
quinn = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["api-all"] }
tokio = { version = "1" }
uuid = { version = "1.4", features = ["v4"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
iroh = { version = "0.9.0", default-features = false, features = ["flat-db"] }
once_cell = "1.18"
futures = "0.3.25"
bytes = "1"
postcard = "1"
num_cpus = { version = "1.15.0" }
quic-rpc = { version = "0.6", default-features = false, features = ["quinn-transport", "flume-transport"] }
data-encoding = "2.4.0"
blake3 = "1.3.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
